--- a/package.json
+++ b/package.json
@@ -21,11 +21,18 @@
     "@babel/register": "^7.6.2",
     "autoprefixer": "^9.6.4",
     "babel-core": "^6.26.3",
+    "eslint": "^6.5.1",
+    "eslint-plugin-vue": "^5.2.3",
     "plop": "^2.4.0",
+    "script-ext-html-webpack-plugin": "^2.1.4",
+    "script-loader": "^0.7.2",
+    "svg-sprite-loader": "^4.1.6",
     "svgo": "^1.3.0",
     "webpack": "^4.41.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "element-ui": "^2.12.0",
     "vue": "^2.6.10"
   }
 }
