--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/vv-admin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
     "new": "plop"
   },
   "repository": {
@@ -23,6 +24,7 @@
     "babel-core": "^6.26.3",
     "eslint": "^6.5.1",
     "eslint-plugin-vue": "^5.2.3",
+    "husky": "^3.0.8",
     "plop": "^2.4.0",
     "script-ext-html-webpack-plugin": "^2.1.4",
     "script-loader": "^0.7.2",
