--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Vultr Vue Admin Web",
   "main": "src/vv-admin.js",
   "scripts": {
+    "precommit": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
     "new": "plop"
@@ -17,24 +18,54 @@
   ],
   "author": "Aventador",
   "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.6.3",
-    "@babel/register": "^7.6.2",
-    "autoprefixer": "^9.6.4",
-    "babel-core": "^6.26.3",
-    "eslint": "^6.5.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "husky": "^3.0.8",
-    "plop": "^2.4.0",
-    "script-ext-html-webpack-plugin": "^2.1.4",
-    "script-loader": "^0.7.2",
-    "svg-sprite-loader": "^4.1.6",
-    "svgo": "^1.3.0",
-    "webpack": "^4.41.0"
+  "husky":{
+    "hooks":{
+      "pre-commit":"lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "element-ui": "^2.12.0",
-    "vue": "^2.6.10"
-  }
+    "vue": "2.6.10"
+  },
+  "devDependencies": {
+    "@babel/core": "7.0.0",
+    "@babel/register": "7.0.0",
+    "@vue/cli-plugin-babel": "3.5.3",
+    "@vue/cli-plugin-eslint": "^3.9.1",
+    "@vue/cli-plugin-unit-jest": "3.5.3",
+    "@vue/cli-service": "3.5.3",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "autoprefixer": "^9.5.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "23.6.0",
+    "chalk": "2.4.2",
+    "chokidar": "2.1.5",
+    "connect": "3.6.6",
+    "eslint": "5.15.3",
+    "eslint-plugin-vue": "5.2.2",
+    "html-webpack-plugin": "3.2.0",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.5",
+    "mockjs": "1.0.1-beta3",
+    "node-sass": "^4.9.0",
+    "plop": "2.3.0",
+    "runjs": "^4.3.2",
+    "sass-loader": "^7.1.0",
+    "script-ext-html-webpack-plugin": "2.1.3",
+    "script-loader": "0.7.2",
+    "serve-static": "^1.13.2",
+    "svg-sprite-loader": "4.1.3",
+    "svgo": "1.2.0",
+    "vue-template-compiler": "2.6.10"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
