--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vultr Vue Admin Web",
   "main": "src/vv-admin.js",
   "scripts": {
-    "dev":"vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "precommit": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
@@ -19,9 +19,9 @@
   ],
   "author": "Aventador",
   "license": "MIT",
-  "husky":{
-    "hooks":{
-      "pre-commit":"lint-staged"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
@@ -31,7 +31,15 @@
     ]
   },
   "dependencies": {
-    "vue": "2.6.10"
+    "axios": "0.19.0",
+    "element-ui": "2.7.2",
+    "js-cookie": "^2.2.1",
+    "normalize.css": "^8.0.1",
+    "nprogress": "0.2.0",
+    "path-to-regexp": "3.1.0",
+    "vue": "2.6.10",
+    "vue-router": "3.1.3",
+    "vuex": "3.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
